--- a/home.html
+++ b/home.html
@@ -99,8 +99,8 @@
                                     <p>A more efficient way to step up your customer experience, empower your business, and improve productivity.</p>
                                     <form class="form-inline mt-5">
                                         <div class="form-group mx-sm-3 mb-2">
-                                            <label for="email" class="sr-only">Email</label>
-                                            <input type="email" class="form-control" id="Email" placeholder="Enter Your Email  Here">
+                                            <label for="emai" class="sr-only">Email</label>
+                                            <input type="email" class="form-control" id="Emai" placeholder="Enter Your Email  Here">
                                           </div>
                                         <button type="submit" class="btn btn-warning mb-2">Eksekusi</button>
                                     </form>
